# meshterial

./: Cargo.toml
assets/: test.dae
example/: Cargo.toml
example/src/: main.rs
meshterial/: Cargo.toml  README.md
meshterial/src/: lib.rs  utils.rs  vk_renderer.rs
meshterial/src/pipelines/: color2d.rs  color3d.rs  mod.rs  phong.rs  texture2d.rs  uniform.rs
meshterial/src/shaders/color2d/: vert.glsl
meshterial/src/shaders/color3d/: frag.glsl  vert.glsl
meshterial/src/shaders/phong/: frag.glsl  vert.glsl
meshterial/src/shaders/texture2d/: frag.glsl  vert.glsl
meshterial/src/vk_renderer/: sendable.rs
